# streamver

./: CMakeLists.txt  README.md
server/: CMakeLists.txt  estructuras.h  main.c
text-client/: CMakeLists.txt  main.c
